--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^11.1.0",
+    "@radix-ui/react-hover-card": "^1.1.4",
+    "@tabler/icons-react": "^3.28.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.18.1",
     "next": "15.1.4",
-    "next-redux-wrapper": "^8.1.0",
+    "qss": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0",
-    "react-redux-firebase": "^3.11.0",
-    "redux": "^5.0.1",
-    "redux-firestore": "^2.0.1",
-    "redux-thunk": "^3.1.0"
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "^22.10.7",
+    "@types/react": "^19.0.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.7.3"
   }
 }
